Fix of bug 15771.

--- a/trunk/UI/cli/ncurses/Makefile.am
+++ b/trunk/UI/cli/ncurses/Makefile.am
@@ -8,7 +8,7 @@ noinst_HEADERS = cli_helper.h \
 libcommoncli_la_SOURCES = cli_helper.cpp \
                           se.cpp dm.cpp
 
-libcommoncli_la_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
+libcommoncli_la_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @ZLIB_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
@@ -58,14 +58,14 @@ btgncli_LDADD   = libcommoncli.la \
                   $(top_builddir)/external/ini/libini.la \
                   $(top_builddir)/bcore/libbtgcore.la
 
-btgncli_LDFLAGS = @LIBS@ @CURSES_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ 
+btgncli_LDFLAGS = @LIBS@ @CURSES_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @ZLIB_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ 
 
-btgncli_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ \
+btgncli_CFLAGS   = @CFLAGS@ @LIBGNUTLS_CFLAGS@ @ZLIB_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
-btgncli_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
+btgncli_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @ZLIB_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
