--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -35,15 +35,15 @@ if BUILDINTERNALPLOTMM
 btgui_LDADD  += $(top_builddir)/external/plotmm/libplotmm.la
 endif
 
-btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ @PLOTMM_LDFLAGS@
+btgui_LDFLAGS  = @LIBS@ @GTKMM_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @ZLIB_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ @PLOTMM_LDFLAGS@
 
-btgui_CXXFLAGS = @CXXFLAGS@ @XMLRPC_CFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ @PLOTMM_CXXFLAGS@ \
+btgui_CXXFLAGS = @CXXFLAGS@ @XMLRPC_CFLAGS@ @GTKMM_CFLAGS@ @LIBGNUTLS_CFLAGS@ @PLOTMM_CXXFLAGS@ @ZLIB_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
 btgui_CFLAGS   = @CFLAGS@ @XMLRPC_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
--DBTG_DEBUG=@BTG_DEBUG@ \
+-DBTG_DEBUG=@BTG_DEBUG@ @ZLIB_CFLAGS@ \
 -DBTG_REV="@BTG_REV@" \
 -DBTG_INTERNAL_XMLRPC="@BTG_INTERNAL_XMLRPC@"
 
