--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -164,11 +164,8 @@ if test -z "$BOOST_SYSTEM_LIB"; then
    AC_MSG_ERROR([unable to find Boost.System library, currently this is required.])
 fi
 
-AX_BOOST_IOSTREAMS
-dnl check that Boost.IOStreams was found:
-if test -z "$BOOST_IOSTREAMS_LIB"; then
-   AC_MSG_ERROR([unable to find Boost.IOStreams library, currently this is required.])
-fi
+CHECK_ZLIB()
+dnl The above call sets ZLIB_LDFLAGS and ZLIB_CFLAGS.
 
 AX_BOOST_FILESYSTEM
 dnl check that Boost.Filesystem was found:
