--- a/branches/2.x-branch/configure.in
+++ b/branches/2.x-branch/configure.in
@@ -144,11 +144,7 @@ AM_ICONV
 
 AC_CACHE_SAVE
 
-AM_PATH_LIBGNUTLS([1.0.0], [gnutlsfound=true], [gnutlsfound=false])
-
-if test "$gnutlsfound" = "false"; then
-        AC_MSG_ERROR([unable to find libgnutls library, currently this is required.])
-fi
+PKG_CHECK_MODULES(LIBGNUTLS, gnutls >= 1.0.0)
 
 AM_LIBGNUTLS_VERSION
 
