Fix of bug 15985. The last patch, improving xmlrpc-epi, has been merged.

--- a/branches/2.x-branch/bcore/Makefile.am
+++ b/branches/2.x-branch/bcore/Makefile.am
@@ -130,7 +130,7 @@ $(AUTH_SOURCES) \
 bitvector.cpp \
 urlstatus.cpp
 
-libbtgcore_la_LIBADD = @XMLRPC_LDFLAGS@ @ZLIB_LDFLAGS@ \
+libbtgcore_la_LIBADD = @XMLRPC_LIBS@ @ZLIB_LDFLAGS@ \
 @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ \
 @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ \
 @BOOST_DATE_TIME_LIB@
