--- a/branches/2.x-branch/daemon/Makefile.am
+++ b/branches/2.x-branch/daemon/Makefile.am
@@ -92,7 +92,7 @@ btgdaemon_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                     $(UPNP_LDADD) $(HTTP_LDADD) \
                     @LIBS@ @LIBTORRENT_LIBS@ @BOOST_SYSTEM_LIB@ @ZLIB_LDFLAGS@ \
                     @LIBGNUTLS_LIBS@ @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ \
-                    @BOOST_PROGRAM_OPTIONS_LIB@ @XMLRPC_LDFLAGS@ @BOOST_DATE_TIME_LIB@ \
+                    @BOOST_PROGRAM_OPTIONS_LIB@ @XMLRPC_LIBS@ @BOOST_DATE_TIME_LIB@ \
                     $(URL_LIBS) $(CYBERLINK_LDADD)
 
 #btgdaemon_LDFLAGS  = -all-static
