Fix of bug 16082.

--- a/trunk/daemon/Makefile.am
+++ b/trunk/daemon/Makefile.am
@@ -32,6 +32,7 @@ noinst_HEADERS = $(CALLBACKHEADERS) $(SSHEADERS) filetrackdata.h filetrack.h con
                  eventhandler.h darg.h \
                  opid.h \
                  dconfig.h daemon.h daemondata.h \
+                 daemonhandler_thr.h \
                  daemonhandler.h \
                  filemgr.h $(URL_HEADER) \
                  btgdaemon.h \
@@ -47,6 +48,7 @@ libdaemon_la_SOURCES = dconfig.cpp darg.cpp \
                        filetrackdata.cpp filetrack.cpp connectionhandler.cpp \
                        session_list.cpp portmgr.cpp \
                        limitval.cpp limitmgr.cpp daemondata.cpp \
+                       daemonhandler_thr.cpp \
                        daemonhandler_url.cpp daemonhandler_file.cpp daemonhandler.cpp progress.cpp \
                        filemgr.cpp $(URL_SOURCE) \
                        context_alert.cpp context_file.cpp context_session.cpp context.cpp \
